// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button fixbug renders {0} , 0 and {false} 1`] = `
<button
  class="ant-btn ant-btn-default"
  type="button"
>
  0
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 2`] = `
<button
  class="ant-btn ant-btn-default"
  type="button"
>
  <span>
    0
  </span>
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 3`] = `
<button
  class="ant-btn ant-btn-default"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 1`] = `
<button
  class="ant-btn ant-btn-default ant-btn-rtl"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 2`] = `
<button
  class="ant-btn ant-btn-default ant-btn-lg ant-btn-rtl"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 3`] = `
<button
  class="ant-btn ant-btn-default ant-btn-sm ant-btn-rtl"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-btn-group ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 5`] = `
<div
  class="ant-btn-group ant-btn-group-lg ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 6`] = `
<div
  class="ant-btn-group ant-btn-group-sm ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 7`] = `
<div
  class="ant-btn-group ant-btn-group-rtl"
/>
`;

exports[`Button should handle fragment as children 1`] = `
<button
  class="ant-btn ant-btn-default"
  type="button"
>
  <span>
    text
  </span>
</button>
`;

exports[`Button should merge text if children using variable 1`] = `
<button
  class="ant-btn ant-btn-default"
  type="button"
>
  <span>
    This is a test 1
  </span>
</button>
`;

exports[`Button should not render as link button when href is undefined 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    button
  </span>
</button>
`;
